# bottlerocket-update-operator

./: .dockerignore  .env  .gitignore  .golangci.yaml  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  Dockerfile  Makefile  README.md  bottlerocket-shadow-1.0.0.tgz  bottlerocket-update-operator-1.0.0.tgz  bottlerocket-update-operator-1.3.0.tgz  bottlerocket-update-operator-1.4.0.tgz  bottlerocket-update-operator.yaml  clarify.toml  deny.toml  go.mod  go.sum  index.yaml  main.go  update-operator.yaml
.cargo/: config.toml
.github/: cache_bust  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: ci.yml  deploy-helm-charts.yaml  image.yaml  rust.yaml
agent/: Cargo.toml
agent/src/: agentclient.rs  apiclient.rs  error.rs  lib.rs  main.rs
apiserver/: Cargo.toml
apiserver/src/: api.rs  constants.rs  error.rs  lib.rs  main.rs  telemetry.rs
apiserver/src/api/: drain.rs  error.rs  mod.rs  node.rs  ping.rs
apiserver/src/auth/: authorizor.rs  error.rs  middleware.rs  mod.rs
apiserver/src/client/: error.rs  mock.rs  mod.rs  ratelimited.rs  webclient.rs
apiserver/src/webhook/: mod.rs  request.rs  response.rs
cmd/dogswatch-platform/: main.go
controller/: Cargo.toml
controller/src/: controller.rs  error.rs  lib.rs  main.rs  metrics.rs  scheduler.rs  statemachine.rs  telemetry.rs
deploy/: Cargo.toml  build.rs
deploy/charts/bottlerocket-shadow/: Chart.yaml  README.md  values.yaml
deploy/charts/bottlerocket-shadow/templates/: NOTES.txt  _helpers.tpl  custom-resource-definition.yaml
deploy/charts/bottlerocket-update-operator/: Chart.yaml  README.md  values.yaml
deploy/charts/bottlerocket-update-operator/templates/: NOTES.txt  _helpers.tpl  agent-cluster-role-binding.yaml  agent-cluster-role.yaml  agent-daemonset.yaml  agent-service-account.yaml  api-server-auth-delegation.yaml  api-server-cluster-role-binding.yaml  api-server-cluster-role.yaml  api-server-deployment.yaml  api-server-service-account.yaml  api-server-service.yaml  cert-manager-agent-cert.yaml  cert-manager-apiserver-cert.yaml  cert-manager-root-cert-issuer.yaml  cert-manager-selfsigned-ca.yaml  cert-manager-selfsigned-issuer.yaml  controller-cluster-role-binding.yaml  controller-cluster-role.yaml  controller-deployment.yaml  controller-priority-class.yaml  controller-service-account.yaml  controller-service.yaml  prometheus-serviceMonitor-apiserver.yaml
deploy/examples/: prometheus-resources.yaml
deploy/tests/: insta_tests.rs
deploy/tests/golden/: custom-resource-definition.yaml
deploy/tests/snapshots/: insta_tests__generated_crds.snap  insta_tests__generated_crds.snap.new
design/: 1.0.0-release.md  DESIGN.md  brupop-demo.md
dev/: deployment.yaml
integ/: Cargo.toml
integ/src/: README.md  ec2_provider.rs  eks_provider.rs  error.rs  lib.rs  main.rs  monitor.rs  nodegroup_provider.rs  pods-template.yaml  updater.rs
models/: Cargo.toml
models/src/: agent.rs  apiserver.rs  constants.rs  controller.rs  crypto.rs  lib.rs  namespace.rs  node.rs  telemetry.rs
models/src/node/: client.rs  drain.rs  error.rs  mod.rs
models/src/node/crd/: error.rs  mod.rs  v1.rs  v2.rs
pkg/agent/: agent.go  agent_test.go  post_tracker.go  progression.go  reconcile.go
pkg/bottlerocket/: containerd.go  mitigate.go
pkg/controller/: controller.go  manager.go  manager_kubernetes.go  manager_test.go  policy.go  policy_test.go
pkg/intent/: intent.go  intent_predicate_test.go  intent_test.go  projection.go
pkg/intent/cache/: cache.go
pkg/intent/internal/callcheck/: check.go
pkg/internal/intents/: intents.go
pkg/internal/logfields/: intent.go
pkg/internal/testoutput/: testoutput.go
pkg/k8sutil/: marker.go
pkg/marker/: keys.go
pkg/nodestream/: config.go  informer.go
pkg/platform/: interface.go
pkg/platform/api/: api.go  api_test.go  platform.go
pkg/platform/updog/: host.go  platform.go  updog.go
scripts/: README.md  install-toolchain.sh  lint-charts.sh  package-charts.sh  publish-charts.sh  validate-chart-versions.sh  validate-charts.sh
yamlgen/: Cargo.toml  build.rs
yamlgen/deploy/: bottlerocket-node-crd.yaml  bottlerocket-update-operator.yaml  brupop-agent.yaml  brupop-apiserver.yaml  brupop-resources.yaml  cert.yaml
yamlgen/src/: lib.rs
yamlgen/telemetry/: prometheus-resources.yaml
