[workspace]
members = [
    "agent",
    "apiserver",
    "controller",
    "models",
    "deploy",
    "integ",
]

[workspace.lints.clippy]
# tracing::instrument macro unhelpfully triggers this clippy warning
blocks_in_conditions = "allow"

[workspace.dependencies]
argh = "0.1"
async-trait = "0.1"
awc = "3"
aws-config = "0.56.1"
aws-sdk-ec2 = "0.33.1"
aws-sdk-eks = "0.34.0"
aws-sdk-iam = "0.30.0"
aws-sdk-ssm = "0.30.0"
base64 = "0.22.1"
chrono = { version = "0.4", default-features = false, features = ["serde", "std"] }
console_log = { version = "1.0", features = ["color"] }
cron = "0.12"
env_logger = "0.10"
futures = "0.3"
governor = "0.6"
hex ="0.4.3"
insta = { version = "1.40.0", features = ["yaml"] }
lazy_static = "1"
log = "0.4"
http = "1.1"
maplit = "1"
mockall = { version = "0.11" }
nonzero_ext = "0.3"

# actix & opentelemetry dependencies
# these package versions should be moved in lockstep to match upstream
actix-web = { version = "4.9", features = ["rustls-0_23"] }
tracing-actix-web = "0.7"
actix-web-opentelemetry = { version = "0.18", features = ["metrics", "metrics-prometheus"] }

# opentelemetry dependencies
opentelemetry = { version = "0.23"}
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio-current-thread"]}
opentelemetry-prometheus = "0.16"
prometheus = "0.13.0"

# k8s-openapi must match the version required by kube and enable a k8s version feature
k8s-openapi = { version = "0.21", default-features = false, features = ["v1_24"] }
kube = { version = "0.88", default-features = false, features = [ "derive", "runtime", "rustls-tls" ] }

regex = "1.11"
reqwest = { version = "0.12", default-features = false, features =  [ "json", "rustls-tls" ] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = { version = "2" }
schemars = "0.8.11"
semver = "1.0"
serde = "1"
serde_json = "1"
serde_plain = "1"
serde_yaml = "0.9"
snafu = "0.7"
strum_macros = "0.24.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-retry = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "json"] }
uuid = { version = "0.8", default-features = false, features = ["serde", "v4"] }
validator = { version = "0.16", features = ["derive"] }
webpki = { version = "0.22.4", features = ["std"] }
