[package]
name = "agent"
version = "0.1.0"
license = "Apache-2.0 OR MIT"
edition = "2018"
publish = false

[dependencies]
models = { path = "../models", version = "0.1.0" }
apiserver = { path = "../apiserver", version = "0.1.0", default-features = false, features = ["client"] }

dotenv = "0.15"
env_logger = "0.9"
futures = "0.3"

# k8s-openapi must match the version required by kube and enable a k8s version feature
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_20"] }
kube = { version = "0.66.0", default-features = true, features = [ "derive", "runtime" ] }

log = "0.4"
semver = { version = "1.0", features = [ "serde" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
snafu = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.11", features =  [ "json" ] }
chrono = { version = "0.4.11", features = [ "serde" ] }
tokio-retry = "0.3"
