[package]
name = "agent"
version = "0.1.0"
license = "Apache-2.0 OR MIT"
edition = "2018"
publish = false

[dependencies]
models = { path = "../models", version = "0.1.0" }
apiserver = { path = "../apiserver", version = "0.1.0", default-features = false, features = ["client"] }

dotenv = "0.15"
futures = "0.3"
opentelemetry = { version = "0.18", features = ["rt-tokio-current-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-opentelemetry = "0.18"

# k8s-openapi must match the version required by kube and enable a k8s version feature
k8s-openapi = { version = "0.16.0", default-features = false, features = ["v1_20"] }
kube = { version = "0.76.0", default-features = true, features = [ "derive", "runtime", "rustls-tls" ] }

semver = { version = "1.0", features = [ "serde" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
snafu = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.11", features =  [ "json" ] }
chrono = { version = "0.4.22", features = [ "serde" ] }
tokio-retry = "0.3"
