[package]
name = "agent"
version = "0.1.0"
license = "Apache-2.0 OR MIT"
edition = "2018"
publish = false

[dependencies]
models = { path = "../models", version = "0.1.0" }
apiserver = { path = "../apiserver", version = "0.1.0", default-features = false, features = ["client"] }

futures = { workspace = true }
governor = { workspace = true }
lazy_static = { workspace = true }
nonzero_ext = { workspace = true }
tracing = { workspace = true }

k8s-openapi = { workspace = true }
kube = { workspace = true }

semver = { workspace = true, features = [ "serde" ] }
serde = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tokio-retry = { workspace = true }
