[package]
name = "apiserver"
version = "0.1.0"
edition = "2018"
publish = false
license = "Apache-2.0 OR MIT"

[features]
default = ["client", "server"]
client = []
server = []


[dependencies]
models = { path = "../models", version = "0.1.0" }

# tracing-actix-web version must align with actix-web version
actix-web = { version = "4", features = ["openssl"] }
awc = "3"
actix-web-opentelemetry = { version = "0.13", features = ["metrics", "metrics-prometheus"] }
openssl = { version = "0.10" }
opentelemetry = { version = "0.18", features = ["rt-tokio-current-thread"]}
opentelemetry-prometheus = "0.11"
tracing = "0.1"
tracing-actix-web = "0.6"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-opentelemetry = "0.18"

# k8s-openapi must match the version required by kube and enable a k8s version feature
k8s-openapi = { version = "0.16.0", default-features = false, features = ["v1_20"] }
kube = { version = "0.75.0", default-features = true, features = [ "derive", "runtime", "rustls-tls" ] }

async-trait = "0.1"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
mockall = { version = "0.11", optional = true }
reqwest = { version = "0.11", features =  [ "json", "native-tls" ] }
schemars = "0.8.10"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
snafu = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-retry = "0.3"

[dev-dependencies]
http = "0.2"
maplit = "1.0"
mockall = "0.11"
models = { path = "../models", version = "0.1.0", features = [ "mockall" ] }
