[package]
name = "apiserver"
version = "0.1.0"
edition = "2018"
publish = false
license = "Apache-2.0 OR MIT"

[lints]
workspace = true

[features]
default = ["client", "server"]
client = []
server = []

[dependencies]
models = { path = "../models", version = "0.1.0" }

actix-web = { workspace = true }
awc = { workspace = true }
actix-web-opentelemetry = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
webpki = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-prometheus = { workspace = true }
tracing = { workspace = true }
tracing-actix-web = { workspace = true }
prometheus = { workspace = true }

k8s-openapi = { workspace = true }
kube = { workspace = true, features = ["client"] }

async-trait = { workspace = true }
futures = { workspace = true }
governor = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
mockall = { workspace = true, optional = true }
nonzero_ext = { workspace = true }
reqwest = { workspace = true }
schemars = "0.8.11"
serde = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tokio-retry = { workspace = true }

[dev-dependencies]
http = { workspace = true }
maplit = { workspace = true }
mockall = { workspace = true }
models = { path = "../models", version = "0.1.0", features = [ "mockall" ] }
