[package]
name = "controller"
version = "0.1.0"
edition = "2018"
publish = false
license = "Apache-2.0 OR MIT"

[dependencies]
actix-web = "4"
chrono = { version = "0.4", default-features = false, features = ["std"] }
cron = "0.12"
futures = "0.3"
http = "0.2.9"
lazy_static = "1.2"
maplit = "1.0"
regex = "1.1"
semver = "1.0"
serde = "1"
serde_plain = "1"
# k8s-openapi must match the version required by kube and enable a k8s version feature
k8s-openapi = { version = "0.19", default-features = false, features = ["v1_24"] }
kube = { version = "0.85", default-features = false, features = [ "derive", "runtime", "rustls-tls" ] }
models = { path = "../models", version = "0.1.0" }
opentelemetry = { version = "0.18", features = ["rt-tokio-current-thread"] }
opentelemetry-prometheus = "0.11"
prometheus = "0.13.0"

snafu = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
maplit = "1"
