[package]
name = "controller"
version = "0.1.0"
edition = "2018"
publish = false
license = "Apache-2.0 OR MIT"

[lints]
workspace = true

[dependencies]
models = { path = "../models", version = "0.1.0" }

actix-web = { workspace = true }
chrono = { workspace = true }
cron = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
lazy_static = { workspace = true }
maplit = { workspace = true }
regex = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_plain = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-prometheus = { workspace = true }
prometheus = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
