[package]
name = "deploy"
version = "0.1.0"
edition = "2018"
publish = false
license = "Apache-2.0 OR MIT"

[lints]
workspace = true

[build-dependencies]
models = { path = "../models", version = "0.1.0" }
kube = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
