[package]
name = "integ"
version = "0.1.0"
license = "Apache-2.0 OR MIT"
edition = "2018"
publish = false

[dependencies]
aws-config = "0.10.1"
aws-sdk-ec2 = "0.10.1"
aws-sdk-eks = "0.10.1"
aws-sdk-iam = "0.10.1"
aws-sdk-ssm = "0.10.1"
base64 = "0.13.0"
console_log = { version = "0.2", features = ["color"] }
env_logger = "0.9"
hex ="0.4.3"
lazy_static = "1.4"
log = "0.4"
maplit = "1.0.2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
snafu = "0.6"
structopt = "0.3.17"
strum_macros = "0.24.0"
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
tokio-retry = "0.3"
uuid = { version = "0.8", default-features = false, features = ["serde", "v4"] }
