[package]
name = "integ"
version = "0.1.0"
license = "Apache-2.0 OR MIT"
edition = "2018"
publish = false

[dependencies]
models = { path = "../models", version = "0.1.0" }

aws-config = "0.54.1"
aws-sdk-ec2 = "0.23.0"
aws-sdk-eks = "0.23.0"
aws-sdk-iam = "0.23.0"
aws-sdk-ssm = "0.23.0"
async-trait = "0.1"
base64 = "0.21.0"
chrono = "0.4"
console_log = { version = "0.2", features = ["color"] }
env_logger = "0.10"
hex ="0.4.3"
lazy_static = "1.4"
log = "0.4"
maplit = "1.0.2"
mockall = { version = "0.11", optional = true }
semver = "1.0"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
snafu = "0.7"
structopt = "0.3.26"
strum_macros = "0.24.3"
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
tokio-retry = "0.3"
uuid = { version = "0.8", default-features = false, features = ["serde", "v4"] }

# k8s-openapi must match the version required by kube and enable a k8s version feature
k8s-openapi = { version = "0.17.0", default-features = false, features = ["v1_20"] }
kube = { version = "0.78", default-features = true, features = [ "derive", "runtime" ] }


[dev-dependencies]
mockall = "0.11"
models = { path = "../models", version = "0.1.0", features = [ "mockall" ] }
