[package]
name = "integ"
version = "0.1.0"
license = "Apache-2.0 OR MIT"
edition = "2018"
publish = false

[lints]
workspace = true

[dependencies]
models = { path = "../models", version = "0.1.0" }

argh = { workspace = true }
aws-config = { workspace = true }
aws-sdk-ec2 = { workspace = true }
aws-sdk-eks = { workspace = true }
aws-sdk-iam = { workspace = true }
aws-sdk-ssm = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
console_log = { workspace = true }
env_logger = { workspace = true }
hex = { workspace = true }
lazy_static = {workspace = true }
log = { workspace = true }
maplit = { workspace = true }
mockall = { workspace = true, optional = true }
semver = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true }
snafu = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true }
tokio-retry = { workspace = true }
uuid = { workspace = true }

k8s-openapi = { workspace = true }
kube = { workspace = true }


[dev-dependencies]
mockall = { workspace = true }
models = { path = "../models", version = "0.1.0", features = [ "mockall" ] }
