[package]
name = "models"
version = "0.1.0"
edition = "2018"
publish = false
license = "Apache-2.0 OR MIT"

[dependencies]
async-trait = "0.1"
chrono = "0.4"
futures = "0.3"
# k8s-openapi must match the version required by kube and enable a k8s version feature
k8s-openapi = { version = "0.17.0", default-features = false, features = ["v1_20"] }
kube = { version = "0.77.0", default-features = true, features = [ "derive", "runtime" ] }

lazy_static = "1.4"
maplit = "1.0"
mockall = { version = "0.11", optional = true }
regex = "1.7"
reqwest = "0.11"
schemars = "0.8.11"
semver = "1.0"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
snafu = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-retry = "0.3"
tracing = "0.1"
validator = { version = "0.16", features = ["derive"] }
