[package]
name = "models"
version = "0.1.0"
edition = "2018"
publish = false
license = "Apache-2.0 OR MIT"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
futures = "0.3"
# k8s-openapi must match the version required by kube and enable a k8s version feature
k8s-openapi = { version = "0.20", default-features = false, features = ["v1_24"] }
kube = { version = "0.85", default-features = false, features = [ "client", "derive", "runtime" ] }

lazy_static = "1.4"
maplit = "1.0"
mockall = { version = "0.11", optional = true }
opentelemetry = { version = "0.18", features = ["rt-tokio-current-thread"] }
regex = "1.9"
reqwest = { version = "0.11", default-features = false, features =  [ "json" ] }
schemars = "0.8.11"
semver = "1.0"
serde = { version = "1", features = [ "derive" ] }
serde_plain = "1"
serde_json = "1"
snafu = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-retry = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "json"] }
validator = { version = "0.16", features = ["derive"] }
