[package]
name = "models"
version = "0.1.0"
edition = "2018"
publish = false
license = "Apache-2.0 OR MIT"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }

k8s-openapi = { workspace = true }
kube = { workspace = true, features = ["client"] }

lazy_static = { workspace = true }
maplit = { workspace = true }
mockall = { workspace = true, optional = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio-current-thread"]}
regex = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
schemars = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }
serde_plain = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tokio-retry = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
validator = { workspace = true }
